// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InactiveItems.vue snapshots: should match if 3 items is inactive 1`] = `
<section
  id="mfn-hb-inactive-items"
>
  <div
    class="header"
  >
    <span
      class="title"
    >
      
      Inactive items
    
    </span>
  </div>
   
  <div
    class="hb-items"
  >
    <div
      class="hb-col"
    >
      <baseitem-stub
        cellid="0"
        item="[object Object]"
        row="inactiveItems"
      />
      <baseitem-stub
        cellid="1"
        item="[object Object]"
        row="inactiveItems"
      />
      <baseitem-stub
        cellid="2"
        item="[object Object]"
        row="inactiveItems"
      />
    </div>
  </div>
</section>
`;

exports[`InactiveItems.vue snapshots: should match if no item is inactive 1`] = `
<section
  id="mfn-hb-inactive-items"
>
  <div
    class="header"
  >
    <span
      class="title"
    >
      
      Inactive items
    
    </span>
  </div>
   
  <div
    class="hb-items"
  >
    <div
      class="hb-col"
    />
  </div>
</section>
`;
